--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documenet</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<h1>Movies</h1>
 
 <body>
+    <div class="box">
+        <div class="move">test </div>
+        <div class="move">test </div>
+        <div class="move">test </div>
+    </div>
 
 </body>
 
