--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
     <title>Documenet</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Movies</h1>
+<h1 class="Title">Movies</h1>
 
 <body>
     <div class="box">
-        <div class="move">test </div>
-        <div class="move">test </div>
-        <div class="move">test </div>
+        <div class="move">
+            <h2>Corpse Bride</h1>
+
+        </div>
+        <div class="move">
+            <h2>Edward Scissorhands</h1>
+
+        </div>
+        <div class="move">
+            <h2>Coraline</h1>
+
+        </div>
+        <div class="move">
+            <h2>Titanic</h1>
+
+        </div>
+        <div class="move">Test </div>
+        <div class="move">Test </div>
+        <div class="move">Test </div>
+        <div class="move">Test </div>
+        <div class="move">Test </div>
+
     </div>
 
 </body>
