--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documenet</title>
 </head>
+<h1>Flexbox Gallery</h1>
 
 <body>
 
