--- a/index.html
+++ b/index.html
@@ -9,36 +9,115 @@
 
 
 </head>
-<h1>Flexbox Gallery</h1>
+<h1>Movies Gallery</h1>
 
 <body>
     <div class="box">
         <div class="move">
+            <br>
             <h2>Corpse Bride</h1>
                 <img src="https://flxt.tmsimg.com/assets/p36328_p_v8_aj.jpg" alt="">
-
+                <br>
+                <p>Victor (Johnny Depp) and Victoria's (Emily Watson) families have arranged their marriage. 
+                    Though they like each other, Victor is nervous about the ceremony. While he's in a forest practicing 
+                    his lines for the wedding, a tree branch becomes a hand that drags him to the land of the dead. It belongs 
+                    to Emily, who was murdered after eloping with her love and wants to marry Victor. Victor must get back 
+                    aboveground before Victoria marries the villainous Barkis Bittern (Richard E. Grant).
+                </p>
         </div>
 
         <div class="move">
+            <br>
             <h2>Edward Scissorhands</h1>
                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4777/4777308_sa.jpg" alt="">
+            <br>
+            <p>A scientist (Vincent Price) builds an animated human being -- the gentle Edward (Johnny Depp). 
+                The scientist dies before he can finish assembling Edward, though, leaving the young man with a 
+                freakish appearance accentuated by the scissor blades he has instead of hands. Loving suburban 
+                saleswoman Peg (Dianne Wiest) discovers Edward and takes him home, where he falls for Peg's teen 
+                daughter (Winona Ryder). However, despite his kindness and artistic talent, Edward's hands make 
+                him an outcast.</p>
         </div>
+
         <div class="move">
+            <br>
             <h2>Coraline</h1>
                 <img src="https://images2.fanpop.com/images/photos/6400000/Coraline-Movie-Cover-coraline-6474024-510-755.jpg"
                     alt="">
+            <br>
+            <p>While exploring her new home, a girl named Coraline (Dakota Fanning) discovers a secret door, 
+                behind which lies an alternate world that closely mirrors her own but, in many ways, is better. 
+                She rejoices in her discovery, until Other Mother (Teri Hatcher) and the rest of her parallel family 
+                try to keep her there forever. Coraline must use all her resources and bravery to make it back to her 
+                own family and life.</p>
         </div>
         <div class="move">
+            <br>
             <h2>Titanic</h1>
+                <img src="https://play-lh.googleusercontent.com/560-H8NVZRHk00g3RltRun4IGB-Ndl0I0iKy33D7EQ0cRRwH78-c46s90lZ1ho_F1so" alt="">
+            <br>
+            <p>James Cameron's "Titanic" is an epic, action-packed romance set against the ill-fated maiden voyage of the R.M.S. 
+               Titanic; the pride and joy of the White Star Line and, at the time, the largest moving object ever built. 
+               She was the most luxurious liner of her era -- the "ship of dreams" -- which ultimately carried over 1,500 
+               people to their death in the ice cold waters of the North Atlantic in the early hours of April 15, 1912.</p>
+        </div>
 
-        </div>
         <div class="move">
+            <br>
             <h2>Breakfast at Tiffany's</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Breakfast_at_Tiffany%27s_%281961_poster%29.jpg" alt="">
+            <br>
+            <p>Based on Truman Capote's novel, this is the story of a young woman in New York City who meets a young man when he moves 
+                into her apartment building. He is with an older woman who is very wealthy, but he wants to be a writer. 
+                She is working as an expensive escort and searching for a rich, older man to marry.</p>
         </div>
-        <div class="move">Test </div>
-        <div class="move">Test </div>
-        <div class="move">Test </div>
-        <div class="move">Test </div>
+
+        <div class="move">
+            <br>
+            <h2>Maleficent</h2>
+            <img src="https://m.media-amazon.com/images/M/MV5BMjAwMzAzMzExOF5BMl5BanBnXkFtZTgwOTcwMDA5MTE@._V1_FMjpg_UX1000_.jpg " alt="">
+            <br>
+            <p>As a beautiful young woman of pure heart, Maleficent (Angelina Jolie) has an idyllic life in a forest kingdom. 
+                When an invading army threatens the land, Maleficent rises up to become its fiercest protector. However, a 
+                terrible betrayal hardens her heart and twists her into a creature bent on revenge. She engages in an epic 
+                battle with the invading king's successor, then curses his newborn daughter, Aurora -- realizing only later
+                that the child holds the key to peace in the kingdom.</p>
+        </div>
+
+        <div class="move"> 
+            <br>
+            <h2>The Lion King</h2>
+            <img src="https://images.moviesanywhere.com/18f5accdebb8d192cccb424ff76150f0/9cbdd11a-ba2d-4d0e-9549-fd5643f00a32.jpg" alt="">
+            <br>
+            <p>This Disney animated feature follows the adventures of the young lion Simba (Jonathan Taylor Thomas), the heir of his father,
+               Mufasa (James Earl Jones). Simba's wicked uncle, Scar (Jeremy Irons), plots to usurp Mufasa's throne by luring father and 
+               son into a stampede of wildebeests. But Simba escapes, and only Mufasa is killed. Simba returns as an adult (Matthew Broderick) 
+               to take back his homeland from Scar with the help of his friends Timon (Nathan Lane) and Pumbaa (Ernie Sabella).</p>
+        </div>
+
+        <div class="move">
+            <br>
+            <h2>Toy Story</h2>
+            <img src="https://m.media-amazon.com/images/M/MV5BMDU2ZWJlMjktMTRhMy00ZTA5LWEzNDgtYmNmZTEwZTViZWJkXkEyXkFqcGdeQXVyNDQ2OTk4MzI@._V1_.jpg" alt="">
+            <br>
+            <p>Woody (Tom Hanks), a good-hearted cowboy doll who belongs to a young boy named Andy (John Morris), sees his position as 
+                Andy's favorite toy jeopardized when his parents buy him a Buzz Lightyear (Tim Allen) action figure. Even 
+                worse, the arrogant Buzz thinks he's a real spaceman on a mission to return to his home planet. When Andy's
+                family moves to a new house, Woody and Buzz must escape the clutches of maladjusted neighbor Sid Phillips 
+                (Erik von Detten) and reunite with their boy.</p>
+        </div>
+
+        <div class="move">
+            <br>
+            <h2>Avatar</h2>
+            <img src="https://m.media-amazon.com/images/M/MV5BNjA3NGExZDktNDlhZC00NjYyLTgwNmUtZWUzMDYwMTZjZWUyXkEyXkFqcGdeQXVyMTU1MDM3NDk0._V1_FMjpg_UX1000_.jpg" alt="">
+            <br>
+            <p>On the lush alien world of Pandora live the Na'vi, beings who appear primitive but are highly evolved. Because the 
+                planet's environment is poisonous, human/Na'vi hybrids, called Avatars, must link to human minds to allow 
+                for free movement on Pandora. Jake Sully (Sam Worthington), a paralyzed former Marine, becomes mobile again 
+                through one such Avatar and falls in love with a Na'vi woman (Zoe Saldana). As a bond with her grows, he is 
+                drawn into a battle for the survival of her world.</p>
+        </div>
 
     </div>
 
