--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="box">
-        <div class="move">
+        <div id="move">
 
             <h2>Corpse Bride</h1>
                 <img src="https://flxt.tmsimg.com/assets/p36328_p_v8_aj.jpg" alt="">
@@ -31,7 +31,7 @@
                 </p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Edward Scissorhands</h1>
                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4777/4777308_sa.jpg" alt="">
@@ -44,7 +44,7 @@
                     him an outcast.</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Coraline</h1>
                 <img src="https://images2.fanpop.com/images/photos/6400000/Coraline-Movie-Cover-coraline-6474024-510-755.jpg"
@@ -57,7 +57,7 @@
                     her
                     own family and life.</p>
         </div>
-        <div class="move">
+        <div id="move">
 
             <h2>Titanic</h1>
                 <img src="https://play-lh.googleusercontent.com/560-H8NVZRHk00g3RltRun4IGB-Ndl0I0iKy33D7EQ0cRRwH78-c46s90lZ1ho_F1so"
@@ -73,7 +73,7 @@
                     1912.</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Breakfast at Tiffany's</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Breakfast_at_Tiffany%27s_%281961_poster%29.jpg"
@@ -85,7 +85,7 @@
                 She is working as an expensive escort and searching for a rich, older man to marry.</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Maleficent</h2>
             <img src="https://m.media-amazon.com/images/M/MV5BMjAwMzAzMzExOF5BMl5BanBnXkFtZTgwOTcwMDA5MTE@._V1_FMjpg_UX1000_.jpg "
@@ -102,7 +102,7 @@
                 that the child holds the key to peace in the kingdom.</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>The Lion King</h2>
             <img src="https://images.moviesanywhere.com/18f5accdebb8d192cccb424ff76150f0/9cbdd11a-ba2d-4d0e-9549-fd5643f00a32.jpg"
@@ -118,7 +118,7 @@
                 Sabella).</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Toy Story</h2>
             <img src="https://m.media-amazon.com/images/M/MV5BMDU2ZWJlMjktMTRhMy00ZTA5LWEzNDgtYmNmZTEwZTViZWJkXkEyXkFqcGdeQXVyNDQ2OTk4MzI@._V1_.jpg"
@@ -135,7 +135,7 @@
                 (Erik von Detten) and reunite with their boy.</p>
         </div>
 
-        <div class="move">
+        <div id="move">
 
             <h2>Avatar</h2>
             <img src="https://m.media-amazon.com/images/M/MV5BNjA3NGExZDktNDlhZC00NjYyLTgwNmUtZWUzMDYwMTZjZWUyXkEyXkFqcGdeQXVyMTU1MDM3NDk0._V1_FMjpg_UX1000_.jpg"
