--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <h1>Movies Gallery</h1>
-<img src="pop.png" alt="">
+<img id="spinny" src="Head.png" alt="">
 
 <body>
     <div class="box">
