--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                 drawn into a battle for the survival of her world.</p>
         </div>
 
+        <p class="Bottom">
+            <br>
+            <a href="https://www.imdb.com/search/">Find Your Movie</a>
+        </p>
     </div>
 
 </body>
