--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <p class="Bottom">
             <br>
-            <a href="https://www.imdb.com/search/">Find Your Movie</a>
+            <a href="https://www.imdb.com/search/">Find A Movie</a>
         </p>
     </div>
 
